--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.5.1",
+    "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
