--- a/back-end/package.json
+++ b/back-end/package.json
@@ -28,6 +28,7 @@
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "maskdata": "^1.1.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
