--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/felicitembeykoumatey/P7_Groupamania#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cli": "^1.0.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "express-rate-limit": "^5.2.6",
@@ -30,7 +31,6 @@
     "nodemon": "^2.0.15",
     "password-validator": "^5.1.1",
     "path": "^0.12.7",
-    "sequelize": "^6.14.1",
-   
+    "sequelize": "^6.14.1"
   }
 }
