--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,14 +23,17 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "express-rate-limit": "^5.2.6",
+    "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "maskdata": "^1.1.6",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.15",
     "password-validator": "^5.1.1",
     "path": "^0.12.7",
-    "sequelize": "^6.14.1"
+    "sequelize": "^6.14.1",
+    "xss": "^1.0.10"
   }
 }
