--- a/back-end/package.json
+++ b/back-end/package.json
@@ -26,12 +26,15 @@
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "password-validator": "^5.1.1",
     "path": "^0.12.7",
     "sequelize": "^6.14.1",
     "xss": "^1.0.10"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.7"
   }
 }
