--- a/groupomania/package.json
+++ b/groupomania/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-plugin-router": "^5.0.1",
+    "@vue/cli-plugin-vuex": "^5.0.1",
+    "axios": "^0.26.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "node-sass": "^7.0.1",
+    "vue": "^3.0.0",
+    "vue-cli": "^2.9.6",
+    "vue-router": "^4.0.12",
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
