--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/felicitembeykoumatey/P7_Groupamania#readme",
   "dependencies": {
+    "autoloader": "^2.1.0",
     "bcrypt": "^5.0.1",
     "cli": "^1.0.1",
     "dotenv": "^14.3.2",
@@ -31,6 +32,7 @@
     "nodemon": "^2.0.15",
     "password-validator": "^5.1.1",
     "path": "^0.12.7",
+    "permission": "^1.1.0",
     "sequelize": "^6.14.1",
     "xss": "^1.0.10"
   },
