--- a/groupomania/package.json
+++ b/groupomania/package.json
@@ -12,6 +12,7 @@
     "@vue/cli-plugin-vuex": "^5.0.1",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "vue": "^3.0.0",
     "vue-cli": "^2.9.6",
