--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "axios": "^0.26.1",
     "core-js": "^3.21.1",
     "node-sass": "^7.0.1",
+    "sass": "^1.49.9",
     "vue": "^3.2.13",
     "vue-cli": "^2.9.6",
     "vue-router": "^4.0.14",
