--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,19 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.26.1",
     "core-js": "^3.21.1",
     "node-sass": "^7.0.1",
     "sass": "^1.49.9",
+    "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
     "vue-cli": "^2.9.6",
     "vue-router": "^4.0.14",
     "vue-template-compiler": "^2.6.14",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
