--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.49.9",
     "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
     "vue-cli": "^2.9.6",
     "vue-router": "^4.0.14",
     "vue-template-compiler": "^2.6.14",
