--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,9 +21,11 @@
     "autoloader": "^2.1.0",
     "bcrypt": "^5.0.1",
     "cli": "^1.0.1",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
-    "express-rate-limit": "^5.2.6",
+    "express-rate-limit": "^5.5.1",
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
