--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,18 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.26.1",
+    "babel-eslint": "^10.1.0",
     "core-js": "^3.21.1",
+    "font-awesome": "^4.7.0",
+    "form-data": "^4.0.0",
     "node-sass": "^7.0.1",
+    "router": "^1.3.6",
     "sass": "^1.49.9",
     "vee-validate": "^4.5.10",
-    "vue": "^3.2.13",
+    "vue": "^3.2.31",
     "vue-axios": "^3.4.1",
     "vue-cli": "^2.9.6",
+    "vue-loader": "^17.0.0",
     "vue-router": "^4.0.14",
     "vue-template-compiler": "^2.6.14",
     "vuex": "^4.0.2",
@@ -32,7 +37,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.5.0"
   },
   "eslintConfig": {
     "root": true,
