back-end  supprimer et recréer
suppression des tables inutiles, probleme de cles secondaires resolus, problème de login resolu

--- a/back-end/config/config.json
+++ b/back-end/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "root",
     "password": "Mbeyfeli1990*",
-    "database": "sequelize-groupomania",
+    "database": "db_groupomania",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "Mbeyfeli1990*",
-    "database": "sequelize-groupomania",
+    "database": "db_groupomania",
     "host": "localhost",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": "Mbeyfeli1990*",
-    "database": "sequelize-groupomania",
+    "database": "db_groupomania",
     "host": "localhost",
     "dialect": "mysql"
   }
