--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@popperjs/core": "^2.11.5",
     "axios": "^0.26.1",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.21.1",
     "font-awesome": "^4.7.0",
     "form-data": "^4.0.0",
