--- a/back-end/package.json
+++ b/back-end/package.json
@@ -29,6 +29,7 @@
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "maskdata": "^1.1.10",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
