--- a/back-end/package.json
+++ b/back-end/package.json
@@ -28,6 +28,7 @@
     "express-rate-limit": "^5.5.1",
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "maskdata": "^1.1.10",
     "multer": "^1.4.4",
