--- a/back-end/package.json
+++ b/back-end/package.json
@@ -38,6 +38,7 @@
     "path": "^0.12.7",
     "permission": "^1.1.0",
     "sequelize": "^6.14.1",
+    "validator": "^13.7.0",
     "xss": "^1.0.10"
   },
   "devDependencies": {
